@@ -1,0 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title><%= title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="<%= baseUrl %>/static/favicon.ico" />
+    <link href="<%= baseUrl %>/static/css/lipstick.css" rel="stylesheet">
+    <link href="<%= baseUrl %>/static/css/robohydra.css" rel="stylesheet">
+    <script src="<%= baseUrl %>/static/js/robohydra.js"></script>
+
+    <!-- HTML5 shiv -->
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="span12 pod">
+          <div class="pod-body">
+            <h1>Recording…</h1>
+
+            <p>From now on, all traffic will be recorded in
+            <strong><code><%= trafficFilePath %></code></strong>.</p>
+
+            <p>When you're done you can replay that traffic by visiting
+            <a href="/start-replaying?trafficFilePath=<%= encodeURIComponent(trafficFilePath)
+            %>">/start-replaying?trafficFilePath=<%= trafficFilePath
+            %></a>.</p>
+
+            <p>If you wanted to record in a different file, you can
+              go back to the "<a href="/start-recording">Recording
+              Mode configuration</a>".</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
