@@ -1,0 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title><%= title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="<%= baseUrl %>/static/favicon.ico" />
+    <link href="<%= baseUrl %>/static/css/lipstick.css" rel="stylesheet">
+    <link href="<%= baseUrl %>/static/css/robohydra.css" rel="stylesheet">
+    <script src="<%= baseUrl %>/static/js/robohydra.js"></script>
+
+    <!-- HTML5 shiv -->
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="span12 pod">
+          <div class="pod-body">
+            <h1>Replay mode failed</h1>
+
+            <p>Sorry, could not load traffic from <strong><code><%=
+            trafficFilePath %></code></strong>.</p>
+
+            <% if (trafficFiles.length) { %>
+              <p>Try with one of these traffic files instead:</p>
+
+              <ul>
+                <% trafficFiles.forEach(function (filePath) { %>
+                  <li><a href="/start-replaying?trafficFilePath=<%= filePath %>"><%= filePath %></a></li>
+                <% }); %>
+              </ul>
+            <% } else { %>
+              <p>There are no other traffic files (<code>*.json</code>) in the current directory.</p>
+            <% } %>
+
+            <p>You can go to the <a href="/start-recording">Recording
+            Mode configuration</a> and save some more traffic.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
